syntax = "proto3";

package proto.user.v1;

option go_package = "github.com/knudsenTaunus/employeeService/internal/router/protobuf/generated/go/user/v1;userpb";

service UserService {
  rpc Register (UserServiceRegisterRequest) returns (stream UserServiceRegisterResponse);
  rpc Deregister (UserServiceDeregisterRequest) returns (UserServiceDeregisterResponse);
}

message UserServiceRegisterRequest {
  string client_name = 1;
}

message UserServiceDeregisterRequest {
  string client_name = 1;
}

message UserServiceDeregisterResponse {
  string client_name = 1;
}

message UserServiceRegisterResponse {
  string first_name = 1;
  string last_name = 2;
  string nickname = 3;
  string email = 4;
  string country = 5;
  string updated_at = 6;
}



